--- a/Dockerfile_NODE
+++ b/Dockerfile_NODE
@@ -1,8 +1,8 @@
-FROM node:18
+FROM node:16
 
 USER root
 
-RUN echo 'hello'
+ENV NUXT_HOST=0.0.0.0
+ENV NUXT_PORT=80
 
-# CMD node example.js ; tail -f /dev/null
-CMD node server.js
+CMD npm install; npm run dev
